Add data file upload endpoint
