# src/main/java/gateway/controller/util/GatewayUtil.java
@@ -3,22 +3,28 @@ package gateway.controller.util;
 import java.security.Principal;
 
 import javax.annotation.PostConstruct;
+import javax.annotation.PreDestroy;
 
 import messaging.job.KafkaClientFactory;
-import model.response.ErrorResponse;
-import model.response.PiazzaResponse;
+import model.data.FileRepresentation;
+import model.data.location.FileLocation;
+import model.data.location.S3FileStore;
+import model.job.type.IngestJob;
 
 import org.apache.kafka.clients.producer.Producer;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Component;
-import org.springframework.web.client.RestClientException;
+import org.springframework.web.multipart.MultipartFile;
 
 import util.PiazzaLogger;
 import util.UUIDFactory;
+
+import com.amazonaws.auth.BasicAWSCredentials;
+import com.amazonaws.services.s3.AmazonS3;
+import com.amazonaws.services.s3.AmazonS3Client;
+import com.amazonaws.services.s3.model.ObjectMetadata;
 
 /**
  * Utility class that defines common procedures for handling requests,
@@ -37,8 +43,17 @@ public class GatewayUtil {
 	private String KAFKA_ADDRESS;
 	@Value("${kafka.group}")
 	private String KAFKA_GROUP;
+	@Value("${s3.domain}")
+	private String AMAZONS3_DOMAIN;
+	@Value("${vcap.services.pz-blobstore.credentials.access:}")
+	private String AMAZONS3_ACCESS_KEY;
+	@Value("${vcap.services.pz-blobstore.credentials.private:}")
+	private String AMAZONS3_PRIVATE_KEY;
+	@Value("${vcap.services.pz-blobstore.credentials.bucket}")
+	private String AMAZONS3_BUCKET_NAME;
 
 	private Producer<String, String> producer;
+	private AmazonS3 s3Client;
 
 	/**
 	 * Initializing the Kafka Producer on Controller startup.
@@ -47,6 +62,18 @@ public class GatewayUtil {
 	public void init() {
 		// Kafka Producer.
 		producer = KafkaClientFactory.getProducer(KAFKA_ADDRESS.split(":")[0], KAFKA_ADDRESS.split(":")[1]);
+		// Connect to S3 Bucket. Only apply credentials if they are present.
+		if ((AMAZONS3_ACCESS_KEY.isEmpty()) && (AMAZONS3_PRIVATE_KEY.isEmpty())) {
+			s3Client = new AmazonS3Client();
+		} else {
+			BasicAWSCredentials credentials = new BasicAWSCredentials(AMAZONS3_ACCESS_KEY, AMAZONS3_PRIVATE_KEY);
+			s3Client = new AmazonS3Client(credentials);
+		}
+	}
+
+	@PreDestroy
+	public void cleanup() {
+		producer.close();
 	}
 
 	/**
@@ -87,5 +114,36 @@ public class GatewayUtil {
 	 */
 	public String getPrincipalName(Principal user) {
 		return user != null ? user.getName() : "UNAUTHENTICATED";
+	}
+
+	/**
+	 * Handles the uploaded file from the data/file endpoint. This will push the
+	 * file to S3, and then modify the content of the job to reference the new
+	 * S3 location of the file.
+	 * 
+	 * @param jobId
+	 *            The ID of the Job, used for generating a unique S3 bucket file
+	 *            name.
+	 * @param job
+	 *            The ingest job, containing the DataResource metadata
+	 * @param file
+	 *            The file to be uploaded
+	 * @return The modified job, with the location of the S3 file added to the
+	 *         metadata
+	 */
+	public IngestJob pushS3File(String jobId, IngestJob job, MultipartFile file) throws Exception {
+		// The content length must be specified.
+		ObjectMetadata metadata = new ObjectMetadata();
+		metadata.setContentLength(file.getSize());
+		// Send the file to S3. The key corresponds with the S3 file name.
+		String fileKey = String.format("%s-%s", jobId, file.getOriginalFilename());
+		s3Client.putObject(AMAZONS3_BUCKET_NAME, fileKey, file.getInputStream(), metadata);
+		// Note the S3 file path in the Ingest Job.
+		// Attach the file to the FileLocation object
+		FileLocation fileLocation = new S3FileStore(AMAZONS3_BUCKET_NAME, fileKey, AMAZONS3_DOMAIN);
+		((FileRepresentation) job.getData().getDataType()).setLocation(fileLocation);
+		logger.log(String.format("S3 File for Job %s Persisted to %s:%s", jobId, AMAZONS3_BUCKET_NAME, fileKey),
+				PiazzaLogger.INFO);
+		return job;
 	}
 }
